animation mobile fix

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
   width: 200px;
   border: 10px solid black;
   border-radius: 20%;
+  transition: opacity 1s ease-in-out;
 }
 
 .game-over {
